assets/main.css
/* ... */
.container i {
    color: #0a183d;
    z-index: 1;
}

a {
    color: var(--primary);
}

h3 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.8vmin;
}

.btn {
    color: var(--c);
    font-size: 19px;
    border: 0.3em solid var(--c);
    border-radius: 0.5em;
    width: 12em;
    height: 3.5em;
    text-transform: uppercase;
    font-weight: bold;
    font-family: sans-serif;
    letter-spacing: 0.1em;
    text-align: center;
    line-height: 3em;
    position: relative;
    overflow: hidden;
    z-index: 1;
    transition: 0.5s;
    margin: 2em;
    margin-top: -25px;
    cursor: none;
}

.btn2 {
    background-color: #4CAF50;
    /* Green */
    border: none;
    margin-top: 10px;
    color: white;
    padding: 0.5em 1.5em;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 18px;
    cursor: none;
    border-radius: 0.5em;
    transform: 0.5s;
}

.btn2:hover {
    background-color: #3e8e41;
    transform: scale(1.1);
    transition: 0.5s;
}

.changable-text {
    color: #4CAF50;
    font-family: Arial, Helvetica, sans-serif;
    padding: 5px 15px;
    margin-top: 10px;
    margin-bottom: -3px;
    word-wrap: break-word;
    font-size: 1.25rem;
    border: 2px solid #2c2c2c;
    border-radius: 10px;
    height: auto !important;
}

#instruction-btn,
#gameTime1,
#gameTime2,
#gameTime3,
#gameTime4 {
    justify-content: center;
    display: flex;
    width: 11rem;
    height: 2.5rem;
    margin: 0px;
    margin-top: 0.3rem;
    margin-right: 0.5rem;
    font-size: 15px;
    align-items: center;
}

.instruction-close-btn {
    position: absolute;
    top: 10px;
    right: 10px; 
    background: none;
    border: none;
    font-size: 1.5rem;
    color: #ff0000;
}

#instructions.show,
#instructions2.show,
#instructions3.show {
    opacity: 1;
    transform: translateY(0);
}

#instructions,
#instructions2,
#instructions3 {
    border: 0.3em solid goldenrod;
    background-color: #eaf9d9;
    border-radius: 0.5em;
    position: absolute;
    z-index: 9;
    padding: 0 1rem;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
    display: none;
    width: 60vw;
    margin-bottom: 7rem;
    margin-top: 1.6rem;
    height: 83vh;
    color: #ff1251;
    flex-direction: column;
    justify-content: center;
    opacity: 0;
    transform: translateY(-20px);
    transition: all 0.5s ease-in-out;
    overflow-y: auto;
    overflow-x: none;
}

.instruction-heading {
    margin-top: 2.5rem;
}

#instructions ol,
#instructions2 ol,
#instructions3 ol {
    margin-top: 0;
    margin-bottom: 0;
}

#instructions ol li,
#instructions2 ol li,
#instructions3 ol li {
    text-align: left;
    font-weight: 300;
}

li {
    margin-top: 10px;
}

span {
    position: absolute;
    width: 25%;
    height: 100%;
    background-color: var(--c);
    transform: translateY(100%);
    border-radius: 50%;
    left: calc((var(--n) - 1) * 25%);
    transition: 0.5s;
    transition-delay: calc((var(--n) - 1) * 0.1s);
    z-index: -1;
}

.btn:hover {
    color: white;
}

.btn:hover span {
    transform: translateY(0) scale(2);
}

.btn span:nth-child(1) {
    --n: 1;
}

.btn span:nth-child(2) {
    --n: 2;
}

.btn span:nth-child(3) {
    --n: 3;
}

.btn span:nth-child(4) {
    --n: 4;
}

.screen {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 95vh;
    width: 100vw;
    color: white;
    transition: margin 0.5s ease-out;
}

.screen-page {
    margin-bottom: 3em;
}

.main {
    display: flex;
    flex-direction: column;
}

.footer {
    font-family: Arial, Helvetica, sans-serif;
    height: auto;
    width: 100vw;
    background-color: #0a183d;
    bottom: 0;
    position: fixed;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 0rem .5rem;
    z-index: 0;
}

.footer .copy {
    padding: .5rem 2rem;
}

.icons {
    padding: .5rem 2rem;
    text-align: center;
    justify-content: center;
}

.footer a {
    color: rgb(19, 247, 50);
    text-decoration: none;
}

.footer a:hover {
    color: #ffff3e;
    transition: all 0.3s linear;
}

.icons i {
    width: 40px;
    height: 40px;
    line-height: 40px;
    margin-left: 6px;
    border-radius: 100%;
    background-color: #73e8ea;
    color: #818a91;
    display: inline-block;
    text-align: center;
    transition: all 0.2s linear;
}

.github :hover {
    background-color: #040404;
    color: #fff;
}

.linkedin :hover {
    background-color: #007bb6;
    color: #fff;
}

.instagram :hover {
    background-color: #ea2c59;
    color: #fff;
}

.main h2 {
    font-family: Imprint MT Shadow;
    font-weight: 900;
    font-size: 7vmin;
    margin-top: -140px;
}

.head {
    display: none;
    width: 100%;
    flex-direction: column;
}

.fruit {
    flex: 1;
    justify-content: center;
}

.fruit h2 {
    font-size: 7vmin;
}

.vegetable .sweets .snacks {
    flex: 1;
    justify-content: center;
}

.screen.up {
    margin-top: -95.7vh;
}

.screen.up1 {
    margin-top: -107vh;
}

.container2 {
    overflow-y: scroll;
    overflow-x: hidden;
    width: 100%;
}

.lists {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    list-style-type: none;
    padding: 0;
    border: 3px solid var(--primary);
    border-radius: 10px;
    background-color: white;
    width: fit-content;
    margin: auto;
}

.lists img {
    transform: scale(0.7);
}

.lists li {
    margin: 0.625rem;
    padding: 10px;
}

.choose-btn {
    background-color: transparent;
    overflow-y: hidden;
    border: 0.23rem solid var(--textcol);
    border-radius: 9px;
    color: var(--c);
    font-family: inherit;
    width: 9.375rem;
    height: 9.375rem;
    background-color: var(--block);
    padding-bottom: 1rem;
}

.choose-btn:hover {
    overflow-y: hidden;
    background-color: var(--hover);
    transform: scale(1.1);
    transition: all 0.3s ease;
}
/* ... */

